<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adriantache.expense_tracker.MainActivity">

    <!-- Pie to display balance -->
    <com.razerdp.widget.animatedpieview.AnimatedPieView
        android:id="@+id/animatedPieView"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/colorAccent" />

    <!-- Button to add item -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/plustocheck" />

    <!-- Savings summary -->
    <RelativeLayout
        android:id="@+id/savingsLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="#1e88e5"
        app:layout_constraintBottom_toTopOf="@id/needsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animatedPieView">

        <TextView
            android:id="@+id/savingsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/savingsText"
            android:textColor="#fff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/savingsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/savingsText"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/savingsDefaultValue"
            android:textColor="#fff"
            android:textSize="32sp" />
    </RelativeLayout>

    <!-- Needs summary -->
    <RelativeLayout
        android:id="@+id/needsLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="#43a047"
        app:layout_constraintBottom_toBottomOf="@id/wantsLayout"
        app:layout_constraintEnd_toStartOf="@+id/wantsLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/savingsLayout">

        <TextView
            android:id="@+id/needsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/needsText"
            android:textColor="#fff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/needsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/needsText"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/needsDefaultValue"
            android:textColor="#fff"
            android:textSize="32sp" />
    </RelativeLayout>

    <!-- Wants summary -->
    <RelativeLayout
        android:id="@+id/wantsLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="#ffb300"
        app:layout_constraintBottom_toTopOf="@id/floatingActionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/needsLayout"
        app:layout_constraintTop_toBottomOf="@+id/savingsLayout">

        <TextView
            android:id="@+id/wantsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/wantsText"
            android:textColor="#fff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/wantsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/wantsText"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/wantsDefaultValue"
            android:textColor="#fff"
            android:textSize="32sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/ratioText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/animatedPieView"
        app:layout_constraintRight_toRightOf="@id/animatedPieView"
        app:layout_constraintTop_toTopOf="@id/animatedPieView"
        app:layout_constraintBottom_toBottomOf="@id/animatedPieView"
        android:textColor="#000"
        android:text="@string/ratioText"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"/>

</android.support.constraint.ConstraintLayout>
