<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adriantache.expense_tracker.AddAmount">

    <!-- Button to confirm item -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/checktoplus"
        android:backgroundTint="#7CB342"/>

    <TextView
        android:id="@+id/addWantsView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border"
        android:backgroundTint="#ffb300"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/wantsText"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/addNeedsView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addNeedsView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/border"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/needsText"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/addSavingsView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/addWantsView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addSavingsView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/savingsText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/addNeedsView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-condensed"
        android:text="USD 100"
        android:textColor="@android:color/background_dark"
        android:textSize="56sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addSavingsView" />

    <TextView
        android:id="@+id/oneCurrency"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/currency_button"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center|center_vertical"
        android:text="1"
        android:textColor="#000"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/fiveCurrency"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount" />

    <TextView
        android:id="@+id/fiveCurrency"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/currency_button"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center|center_vertical"
        android:text="5"
        android:textColor="#000"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tenCurrency"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/oneCurrency"
        app:layout_constraintTop_toBottomOf="@+id/amount"
        app:srcCompat="@drawable/currency_button" />

    <TextView
        android:id="@+id/tenCurrency"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/currency_button"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center|center_vertical"
        android:text="10"
        android:textColor="#000"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fiveCurrency"
        app:layout_constraintTop_toBottomOf="@+id/amount"
        app:srcCompat="@drawable/currency_button" />

    <TextView
        android:id="@+id/twentyCurrency"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/currency_button"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center|center_vertical"
        android:text="20"
        android:textColor="#000"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/fiftyCurrency"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oneCurrency" />

    <TextView
        android:id="@+id/fiftyCurrency"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/currency_button"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center|center_vertical"
        android:text="50"
        android:textColor="#000"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/hundredCurrency"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/twentyCurrency"
        app:layout_constraintTop_toBottomOf="@+id/oneCurrency"
        app:srcCompat="@drawable/currency_button" />

    <TextView
        android:id="@+id/hundredCurrency"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/currency_button"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center|center_vertical"
        android:text="100"
        android:textColor="#000"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fiftyCurrency"
        app:layout_constraintTop_toBottomOf="@+id/oneCurrency"
        app:srcCompat="@drawable/currency_button" />

    <TextView
        android:id="@+id/twoHundredCurrency"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/currency_button"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center|center_vertical"
        android:text="200"
        android:textColor="#000"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/fiveHundredCurrency"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twentyCurrency" />

    <TextView
        android:id="@+id/fiveHundredCurrency"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/currency_button"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center|center_vertical"
        android:text="500"
        android:textColor="#000"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/thousandCurrency"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/twoHundredCurrency"
        app:layout_constraintTop_toBottomOf="@+id/twentyCurrency"
        app:srcCompat="@drawable/currency_button" />

    <TextView
        android:id="@+id/thousandCurrency"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/currency_button"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center|center_vertical"
        android:text="1000"
        android:textColor="#000"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fiveHundredCurrency"
        app:layout_constraintTop_toBottomOf="@+id/twentyCurrency"
        app:srcCompat="@drawable/currency_button" />


</android.support.constraint.ConstraintLayout>
